--- a/EjercicioWeb/web/menu.html
+++ b/EjercicioWeb/web/menu.html
@@ -9,5 +9,6 @@ and open the template in the editor.
     <ul id='lista'>
         <li><a href="index.jsp">Home</a></li>
         <li><a href="registro.jsp">Registrarse</a></li>
+        <li><a href="Registros.jsp">Mostrar Registros</a></li>
     </ul>
 </nav>
